components/HandballComponenets/GamePageComponents/gamesStyles.module.css
@property --fallback-team-col {
    syntax: "<color>";
    inherits: false;
    initial-value: #b1f0ba;
}

@property --team-one-col {
  syntax: "<color>";
    inherits: false;
    initial-value: var(--fallback-team-col);
}

@property --team-two-col {
    syntax: "<color>";
    inherits: false;
    initial-value: var(--fallback-team-col);
}

.test {
    background: linear-gradient(45deg, mediumpurple, mediumturquoise);
}

.teamInfo {
    text-align: center;
    margin: auto 20px;
    background: #1113;
}

.teamInfo * {
    line-height: 20px;
}

.teamInfo *:first-child {
    font-weight: bold;
}

.dash {
    text-align: center;
    margin: auto;
    font-weight: bold;
}

.teamNames * {
    margin: auto;
}

@media (min-width: 700px) {
    .teamGradient {
        background: linear-gradient(90deg, var(--team-one-col), #FFF0, var(--team-two-col));
        width: 100%;
        height: 300px;
        display: grid;
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
        grid-template-rows: 75px 175px 50px;
    }


    .teamNames {
        font-size: 30px;
        font-weight: bold;
        text-overflow: ellipsis;
        line-clamp: 2;
        grid-column: span 5;
        align-content: center;
        padding: 5px
    }

    .teamLogos {
        grid-column: span 2;
        grid-row: span 2;
        overflow: hidden;
        margin: auto;
        object-fit: contain;
        padding: 5px;
    }

    .teamInfo {
        grid-column: span 2;
        grid-row: span 1;
    }

    .teamScores {
        grid-column: span 1;
        text-align: center;;
        font-size: 60px;
        font-weight: bold;
        margin: auto;
    }

    .dash {
        grid-column: span 2;
        font-size: 40px;
    }

    .gameOfficial {
        grid-column: 3 / span 8;
    }
}


@media (max-width: 699px) {
    .teamGradient {
        background: linear-gradient(90deg, var(--team-one-col), #FFF0, var(--team-two-col));
        width: 100%;
        height: 300px;
        display: grid;
        grid-auto-columns: 50fr 2fr 1fr 2fr 50fr;
        grid-template-rows: 75px 125px 50px 50px;
        grid-template-areas:
            'team1 team1  vers  team2 team2'
            'logo1 score1 dash score2 logo2'
            'info1 info1   gap  info2 info2'
            'offic offic  offic offic offic'
    }

    .team1Name {grid-area: team1;}
    .team2Name {grid-area: team2;}
    .score1 {grid-area: score1;}
    .score2 {grid-area: score2;}
    .logo1 {grid-area: logo1;}
    .logo2 {grid-area: logo2;}

    .teamNames {
        font-size: min(30px, 4vw);
        font-weight: bold;
        line-clamp: 2;
        align-content: center;
        padding: 5px;
    }

    .teamLogos {
        margin: auto;
        padding: 10px;
        height: 100%;
        overflow: visible;
    }

    .teamLogos * {
        width: 90%;
    }

    .teamScores {
        text-align: center;;
        font-size: 20px;
        font-weight: bold;
        margin: auto;
    }

    .dash {
        font-size: 30px;
        grid-area: dash;
    }


    .verse {
        grid-area: vers;
        text-align: center;
        font-size: 30px;
        margin: auto;
        font-weight: bold;
    }

    .gameOfficial {
        overflow: visible;
        grid-area: offic;
        font-size: 10px;
        vertical-align: text-bottom;
        position: relative;
    }

    .gameOfficial * {
        position: absolute;
        width: 100%;
        bottom: -10px;
    }

    .info1 {
        grid-area: info1;
        margin-right: calc(30px + 1vw);
        margin-left: 10px;
    }

    .info1 * {
        font-size: 10px
    }

    .info2 {
        grid-area: info2;
        margin-right: 10px;
        margin-left: calc(40px + 1vw);
    }

    .info2 * {
        font-size: 10px
    }

}

.secretLink {
    text-decoration: none;
    color: black
}

